--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -23,8 +23,10 @@
 }
 
 @media screen and (max-width: $medium-width-threshold - 1) {
-  :host {    
-    max-height: none !important;
+  :host {        
     position: relative;    
+    div#dropdownContent {
+      max-height: none !important;
+    }
   }
 }
