--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
@@ -1,5 +1,5 @@
 <div>
-  <material-icon [icon]="model.icon"></material-icon>
+  <material-icon *ngIf="model.icon != null" [icon]="model.icon" size="x-large" baseline></material-icon>
 </div>
 <div>
   <div class="black-color">{{model.label}}</div>
