--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   div:nth-child(1) {
     text-align: center;
-    width: $x-large;
+    width: $large;
   }
   div:nth-child(2) {
     flex: auto;
@@ -17,7 +17,7 @@
   span {
     text-align: right;
     font-weight: bold;
-    margin-right: $x-large;
+    margin-right: $large;
     overflow: hidden;    
     white-space: nowrap;
   }
