--- a/lib/components/fo_button/fo_button_component.html
+++ b/lib/components/fo_button/fo_button_component.html
@@ -1,5 +1,5 @@
 <button [disabled]="disabled == true"
-        class="background-color-primary color-primary"
+        class="themeable background-color-primary color-primary"
         [class.leftBorder]="leftBorder == true"
         [class.rightBorder]="rightBorder == true"
         (click)="onClick()"> {{label}} </button>
