Added clear icon to TextInputComponent

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -22,6 +22,7 @@
   }
 }
 
+/*
 @media screen and (max-width: $medium-width-threshold - 1) {
   :host {        
     position: relative;    
@@ -30,4 +31,4 @@
       max-height: none !important;      
     }
   }
-}
+}*/
