Only show clear icon if there's text

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -25,7 +25,7 @@
            (ngModelChange)="onValueChange($event)"
            (focus)="onFocus($event)"
            type="text">
-    <material-icon *ngIf="clearIcon == true"                   
+    <material-icon *ngIf="clearIcon == true && value?.isEmpty == false"                   
                    size="large"
                    class="color-alert clear"
                    icon="cancel"
