added some mixins

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -12,7 +12,7 @@
     <material-icon *ngIf="leadingIcon != null"                   
                    class="gray-color leading"
                    [icon]="leadingIcon"></material-icon>
-    <input class="roundLeft gray-color-bright"
+    <input class="roundLeft gray-color-bright themeable"
            #input
            [disabled]="disabled == true"
            [placeholder]="placeholder"
