--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -31,8 +31,7 @@ $transitionSpeed: 0.3s ease;
       width: 100%;
       box-sizing: border-box;
       outline: none;
-      line-height: $font-size-5;
-      font-size: $font-size-3;
+      line-height: 120%;      
       border-width: 1px 0;
       border-style: solid;
       padding: $small $small;
