FoTextInput text size is now fully propagated

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -1,6 +1,6 @@
 @import 'package:grid/constants';
 :host {    
-  margin-top: $small;   
+  margin-top: $x-small;   
   position: fixed;
   z-index: 99;
 
