--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -1,11 +1,38 @@
+@import 'package:angular_components/material_icon/mixins';
+@import '../fo_dropdown_list/mixins';
 @mixin fo-text-input-font-size($size) {
   ::ng-deep fo-text-input {
     label {
-      div#flexContainer {
+      div#labelContainer {
+        span {
+          font-size: $size;
+        }
+        @include material-icon-size($size);
+      }
+      div#flexContainer {        
         input.themeable {
+          font-size: $size;
+        }
+        material-icon.leading {         
+          transform: translateX(0.5*$size) !important;
+        }
+        material-icon.clear {               
+          transform: translateX(-1.5*$size) !important;         
+        }
+        input.themeable.leftPadding {
+          padding-left: 2*$size !important;
+        }
+        input.themeable.rightPadding {
+          padding-right: 2*$size !important;
+        }
+        @include material-icon-size($size);
+      }
+      div#errorOutput {
+        div#message {
           font-size: $size;
         }
       }
     }
   }
+  @include dropdown-list-font-size($size);
 }
