Added x-small margin top foOption

--- a/lib/components/fo_quiz/fo_option_component.scss
+++ b/lib/components/fo_quiz/fo_option_component.scss
@@ -1,4 +1,7 @@
+@import 'package:grid/constants';
+
 :host {
+    margin-top: $x-small;    
     material-button {
         color: white;
         float: right;        
