Setting button fontsize now sets padding too

--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -2,6 +2,8 @@
   ::ng-deep fo-button {
     button.themeable {
       font-size: $size;
+      padding-left: $size;
+      padding-right: $size;
     }
   }
 }
