--- a/lib/components/fo_app_layout/fo_app_layout_component.html
+++ b/lib/components/fo_app_layout/fo_app_layout_component.html
@@ -2,8 +2,7 @@
   <table>
     <tr>
       <!-- Sidebar -->
-      <td [style.width]="sidebarWidth"
-          id="sidebarCol">
+      <td [style.width]="sidebarWidth" id="sidebarCol">
         <div id="sidebar"
              class="box-shadow"
              [style.width]="sidebarWidth">
@@ -20,11 +19,12 @@
               <div group
                    *ngFor="let category of categories">
                 <div label>{{category.title | name}}</div>
-                <material-select-item *ngFor="let item of category.items"
-                                      (click)="router.navigate(item.url)">
+                <material-list-item *ngFor="let item of category.items"
+                                    [class.active]="isActive(item)"
+                                    (click)="router.navigate(item.url)">
                   <material-icon [icon]="item.icon"
                                  baseline></material-icon>&nbsp;{{item.label | name}}
-                </material-select-item>
+                </material-list-item>
               </div>
             </material-list>
             <div *ngIf="!expanded"
