--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -13,6 +13,7 @@
       border-style: solid;
       border-radius: $x-small;
       overflow-y: auto;
+      box-sizing: border-box;
       div.category {
         margin: $large $medium $small $medium;
         text-transform: uppercase;
