--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -2,8 +2,9 @@
 @import 'package:grid/constants';
 @import '../../constants.scss';
 :host {
-  display: inline-block;
+  display: inline-block;  
   button {
+    width: 100%;
     font-size: 1rem;
     @include material-icon-size(1rem);
     user-select: none;
