--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -1,5 +1,6 @@
 @import'package:grid/constants';
 @import '../../mixins.scss';
+
 :host {
   display: block;
   position: relative;  
@@ -10,6 +11,7 @@
     white-space: nowrap;   
   }
   div#selector {
+    transition: box-shadow $transitionSpeed;
     display: flex;
     align-items: center;
     border-radius: $x-small;
@@ -29,5 +31,8 @@
       margin: 0 $small;
       color: #555;
     }
+  }
+  div#selector.focus {
+    @include boxShadow();
   }
 }
