dropdown now autocloses on blur, and added left/right border inputs to select

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -10,7 +10,7 @@
            class="black-color category"><strong>{{category}}</strong></div>
       <fo-dropdown-option *ngFor="let option of filteredOptions[category]"
                           [model]="option"
-                          (click)="selectController.add(option)">
+                          (click)="onSelect($event, option)">
       </fo-dropdown-option>
       <hr *ngIf="category != filteredOptions.keys.last"
           class="gray-color-bright">
