--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -1,9 +1,11 @@
-<div (click)="dropdownVisible = !dropdownVisible">
+<div (click)="onClick($event)">
   <div *ngIf="label?.isEmpty == false"
        id="labelContainer"
        class="gray-color margin-bottom-x-small">{{label}}</div>
   <div id="selector"
        class="gray-color-bright"
+       [class.leftBorder]="leftBorder"
+       [class.rightBorder]="rightBorder"
        [class.focus]="dropdownVisible">
     <div id="selectedValue"> {{selectedOption == null ? '-' : selectedOption.label}} </div>
     <material-icon class="arrow"
