Fix error outptu

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -37,7 +37,7 @@
                [disabled]="disabled || control?.valid == false"
                (trigger)="onActionButtonTrigger($event)"></fo-button>
   </div>
-  <div *ngIf="errorMessage != null && dropdownVisible == false"
+  <div *ngIf="errorMessage != null && control?.pristine != true && dropdownVisible == false"
        id="errorOutput"
        class="gray-color-bright">
     <div id="arrow"
