TextInput leading icon now 1.2*size

--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -16,7 +16,7 @@
         }
         material-icon.leading {
           transform: translateX(0.5*$size) !important;
-          @include material-icon-size($size);
+          @include material-icon-size(1.2*$size);
         }
         material-icon.clear {
           transform: translateX(-1.5*$size) !important;
