--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -1,7 +1,6 @@
 <modal [visible]="visible">
   <material-dialog headered
                    class="themeable"
-                   [class.white-header]="whiteHeader == true || titleImageUrl != null"
                    [class.fixed-height]="fixedHeight"
                    [class.fixed-width]="fixedWidth"
                    [class.small-padding]="smallPadding"
@@ -11,12 +10,10 @@
         <img *ngIf="titleImageUrl != null"
              [src]="titleImageUrl"
              alt="title" />
-        <h3 class="themeable color-secondary"
-            *ngIf="titleImageUrl == null && title != null">{{title}}</h3>
+        <h3 *ngIf="titleImageUrl == null && title != null">{{title}}</h3>
         <div *ngIf="showCloseButton"
              id="closeButtonContainer">
-          <material-button class="themeable color-secondary"
-                           clear-size
+          <material-button clear-size
                            (trigger)="close()">
             <material-icon icon="close"
                            size="x-large"></material-icon>
