TextInput should now respond to writeValue #3

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -66,6 +66,12 @@
       border-bottom-right-radius: $x-small;
       border-right-width: 1px;
     }
+    ::ng-deep fo-button {
+      button.themeable {
+        padding-left: $large;
+        padding-right: $large;
+      }      
+    }
   }
   div#flexContainer:focus-within {
     @include boxShadow();
