TextInput now has margin 0

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -5,9 +5,12 @@
 @import '../fo_dropdown_list/mixins';
 
 :host {
-  input, input:focus {
-    font-size: 1rem;
+  input {
     outline: none;
+    margin: 0;
+  }
+  input, input:focus {    
+    font-size: 1rem;    
   }
   display: block;
   position: relative;
